--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -78,3 +78,7 @@
   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
   transition: none;
 }
+.quizSection {
+  display: flex;
+  justify-content: center;
+}
