--- a/src/styles/quizOption.module.scss
+++ b/src/styles/quizOption.module.scss
@@ -1,5 +1,5 @@
 .quizOptionButton {
-    margin: 16px 16px 64px 16px;
+    margin: 0 16px 0 16px;
     max-width: 350px;
     aspect-ratio: 9/14;
     width: 50%;
